--- a/BlackStarWear/Base.lproj/Main.storyboard
+++ b/BlackStarWear/Base.lproj/Main.storyboard
@@ -69,37 +69,103 @@
             </objects>
             <point key="canvasLocation" x="1874" y="94"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Items Collection View Controller-->
         <scene sceneID="x07-my-waw">
             <objects>
-                <collectionViewController id="MWa-y7-RWd" sceneMemberID="viewController">
+                <collectionViewController id="MWa-y7-RWd" customClass="ItemsCollectionViewController" customModule="BlackStarWear" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="0Qc-io-gKg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="8" minimumInteritemSpacing="8" id="zmy-nf-Huv">
-                            <size key="itemSize" width="248" height="248"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="8" id="zmy-nf-Huv">
+                            <size key="itemSize" width="168" height="274"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="16" minY="20" maxX="16" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4DG-AA-qLA">
-                                <rect key="frame" x="83" y="20" width="248" height="248"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCell" id="4DG-AA-qLA" customClass="ItemCollectionViewCell" customModule="BlackStarWear" customModuleProvider="target">
+                                <rect key="frame" x="16" y="20" width="168" height="248"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Ey-bo-uhQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="248" height="248"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="168" height="248"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMH-gA-eQF">
-                                            <rect key="frame" x="0.0" y="0.0" width="248" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1hc-iA-KhZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="168" height="44"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="che-BX-wg8">
+                                                    <rect key="frame" x="8" y="24" width="152" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="che-BX-wg8" firstAttribute="leading" secondItem="1hc-iA-KhZ" secondAttribute="leading" constant="8" id="TIL-32-Jfp"/>
+                                                <constraint firstAttribute="height" constant="44" id="VOA-3B-qAP"/>
+                                                <constraint firstAttribute="trailing" secondItem="che-BX-wg8" secondAttribute="trailing" constant="8" id="d6X-jN-yrH"/>
+                                                <constraint firstItem="che-BX-wg8" firstAttribute="top" secondItem="1hc-iA-KhZ" secondAttribute="top" constant="24" id="nlQ-Mf-hES"/>
+                                                <constraint firstAttribute="bottom" secondItem="che-BX-wg8" secondAttribute="bottom" constant="4" id="wzF-AD-GWm"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JTJ-Ix-9HU">
+                                            <rect key="frame" x="0.0" y="212" width="168" height="36"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5A3-jS-L19" customClass="BuyButton" customModule="BlackStarWear" customModuleProvider="target">
+                                                    <rect key="frame" x="81" y="4" width="70" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="KSh-DT-Uyb"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="xJJ-3I-xgJ"/>
+                                                    </constraints>
+                                                    <state key="normal">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSD-aa-4LG">
+                                                    <rect key="frame" x="8" y="8" width="42" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="OSD-aa-4LG" firstAttribute="leading" secondItem="JTJ-Ix-9HU" secondAttribute="leading" constant="8" id="E9W-s4-Xl0"/>
+                                                <constraint firstItem="5A3-jS-L19" firstAttribute="top" secondItem="JTJ-Ix-9HU" secondAttribute="top" constant="4" id="FpZ-ol-xIC"/>
+                                                <constraint firstAttribute="trailing" secondItem="5A3-jS-L19" secondAttribute="trailing" constant="17" id="Jfa-XH-WPo"/>
+                                                <constraint firstAttribute="bottom" secondItem="5A3-jS-L19" secondAttribute="bottom" constant="7" id="Y0a-TN-BV0"/>
+                                                <constraint firstAttribute="height" constant="36" id="cSf-cK-ddK"/>
+                                                <constraint firstItem="5A3-jS-L19" firstAttribute="leading" relation="lessThanOrEqual" secondItem="OSD-aa-4LG" secondAttribute="trailing" priority="999" constant="31" id="nAX-sZ-ok3"/>
+                                                <constraint firstAttribute="bottom" secondItem="OSD-aa-4LG" secondAttribute="bottom" constant="12" id="uLN-Gx-2Jt"/>
+                                                <constraint firstItem="OSD-aa-4LG" firstAttribute="top" secondItem="JTJ-Ix-9HU" secondAttribute="top" constant="8" id="vBk-H8-2xC"/>
+                                            </constraints>
+                                        </view>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="94V-8g-nJ1">
+                                            <rect key="frame" x="0.0" y="44" width="168" height="168"/>
+                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="94V-8g-nJ1" secondAttribute="trailing" id="7nw-OW-Krx"/>
+                                        <constraint firstItem="JTJ-Ix-9HU" firstAttribute="top" secondItem="94V-8g-nJ1" secondAttribute="bottom" id="AAL-h6-Qnp"/>
+                                        <constraint firstItem="JTJ-Ix-9HU" firstAttribute="leading" secondItem="9Ey-bo-uhQ" secondAttribute="leading" id="B5A-42-c16"/>
+                                        <constraint firstItem="1hc-iA-KhZ" firstAttribute="top" secondItem="9Ey-bo-uhQ" secondAttribute="top" id="Fnl-qp-88i"/>
+                                        <constraint firstItem="94V-8g-nJ1" firstAttribute="top" secondItem="1hc-iA-KhZ" secondAttribute="bottom" id="SBG-gV-jjn"/>
+                                        <constraint firstItem="94V-8g-nJ1" firstAttribute="leading" secondItem="9Ey-bo-uhQ" secondAttribute="leading" id="aHP-pA-X1S"/>
+                                        <constraint firstAttribute="bottom" secondItem="JTJ-Ix-9HU" secondAttribute="bottom" id="dl7-Tc-4K1"/>
+                                        <constraint firstAttribute="trailing" secondItem="JTJ-Ix-9HU" secondAttribute="trailing" id="kV7-26-2xd"/>
+                                        <constraint firstAttribute="trailing" secondItem="1hc-iA-KhZ" secondAttribute="trailing" id="mUA-Dj-ZWv"/>
+                                        <constraint firstItem="1hc-iA-KhZ" firstAttribute="leading" secondItem="9Ey-bo-uhQ" secondAttribute="leading" id="zpD-rZ-ZZ8"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="168" height="248"/>
+                                <connections>
+                                    <outlet property="buyButton" destination="5A3-jS-L19" id="lYx-Qq-8gH"/>
+                                    <outlet property="descriptionLabel" destination="che-BX-wg8" id="qoE-8d-UgL"/>
+                                    <outlet property="itemImageView" destination="94V-8g-nJ1" id="Ary-Pz-rfL"/>
+                                    <outlet property="priceLabel" destination="OSD-aa-4LG" id="fJa-OX-zWU"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
